[package]
name = "mudfish"
version = "0.1.0"
edition = "2021"

[dependencies]
adblock = "0.8.11"
byte-unit = "5.1.4"
clap = { version = "4.5.9", features = ["derive", "env"] }
moka = { version = "0.12.8", features = ["sync"] }
rmp-serde = "1.3.0"
rouille = "3.6.2"
selectors = "0.25.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
swc = "0.282.1"
