[package]
name = "mudfish"
version = "0.1.0"
edition = "2021"

[dependencies]
adblock = { version = "0.8.11", default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }
byte-unit = "5.1.4"
clap = { version = "4.5.9", features = ["derive", "env"] }
hyper = { version = "1.4.1", features = ["full"] }
moka = { version = "0.12.7", features = ["sync"] }
rmp-serde = "1.3.0"
selectors = "0.25.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
swc = "0.282.2"
swc_allocator = "0.1.7"
thiserror = "1.0.63"
